# monetdb-stethoscope

./: .bumpversion.cfg  .gitignore  CHANGELOG.org  CHANGELOG.rst  README.md  README.org  README.rst  pyproject.toml  todo.org
.github/workflows/: release-workflow.yml  testing-workflow.yml
docs/source/: authors.rst  conf.py  dev_notes.rst  examples.rst  index.rst  installation.rst  introduction.rst  mal_reference.rst  modules.rst  obfuscation.rst  usage.rst
monetdb_profiler_tools/: filtering.py  formatting.py  parsing.py  stethoscope.py  transformers.py  utilities.py
monetdb_pystethoscope/: __init__.py  api.py  filtering.py  formatting.py  obfuscation.py  parsing.py  pool.py  stethoscope.py  transformers.py
monetdb_pystethoscope/connection/: api.py
monetdb_stethoscope/: __init__.py  api.py  filtering.py  formatting.py  obfuscation.py  parsing.py  stethoscope.py  transformers.py  utilities.py
monetdb_stethoscope/connection/: __init__.py  api.py
stethoscope/: api.py  filtering.py  formatting.py  obfuscation.py  parsing.py  stethoscope.py
stethoscope/connection/: api.py
tests/: __init__.py  test_filtering.py  test_monetdb_profiler_tools.py  test_transformers.py
tests/data/: input  keywordquoteerror.json  q01_Jun2020.json  q01_Jun2020_statements.txt  q01_Sep2022.json  q01_Sep2022_statements.txt  sqlcommands.json
tests/unit_tests/: test_filtering.py  test_transformers.py
