[tool.poetry]
name = "monetdb_stethoscope"
version = "0.4.1"
description = "MonetDB profiler connection tool"
readme = "README.rst"
authors = ["Panagiotis Koutsourakis <kutsurak@monetdbsolutions.com>"]
repository = "https://github.com/MonetDBSolutions/monetdb-stethoscope"

[tool.poetry.dependencies]
python = "^3.5"
pymonetdb = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-runner = "^5.2"
tox = "^3.14"
flake8 = "^3.7"
coverage = "^4.5"
rope = "^0.14.0"
pyflakes = "^2.1"
mccabe = "^0.6.1"
pycodestyle = "^2.5"
pydocstyle = "^4.0"
yapf = "^0.28.0"
python-language-server = {extras = ["all"], version = "^0.34.1"}
sphinx = "^3.0.3"
bump2version = "^1.0.0"
ipython = {version = "^7.9", python="^3.5"}
pytest-cov = "^2.9.0"
codecov = "^2.1.3"

[tool.poetry.scripts]
stethoscope = 'monetdb_stethoscope.stethoscope:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
